unify the start script of microservices Closes #199